logs/lava-scheduler-tool.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/SecretStorage-2.3.1.egg-info'...
Listing './lib/python3.5/site-packages/argcomplete'...
Listing './lib/python3.5/site-packages/argcomplete/bash_completion.d'...
Listing './lib/python3.5/site-packages/argcomplete-1.9.3.dist-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/json_schema_validator'...
Listing './lib/python3.5/site-packages/json_schema_validator/tests'...
Listing './lib/python3.5/site-packages/json_schema_validator-2.4.1.dist-info'...
Listing './lib/python3.5/site-packages/keyring'...
Listing './lib/python3.5/site-packages/keyring/backends'...
Listing './lib/python3.5/site-packages/keyring/tests'...
Listing './lib/python3.5/site-packages/keyring/tests/backends'...
Listing './lib/python3.5/site-packages/keyring/util'...
Listing './lib/python3.5/site-packages/keyring-10.6.0.dist-info'...
Listing './lib/python3.5/site-packages/lava'...
Listing './lib/python3.5/site-packages/lava/device'...
Compiling './lib/python3.5/site-packages/lava/device/commands.py'...
***   File "./lib/python3.5/site-packages/lava/device/commands.py", line 132
    print device
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/lava/device/tests'...
Listing './lib/python3.5/site-packages/lava/helper'...
Compiling './lib/python3.5/site-packages/lava/helper/command.py'...
***   File "./lib/python3.5/site-packages/lava/helper/command.py", line 118
    except xmlrpclib.Fault, exc:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lava/helper/tests'...
Listing './lib/python3.5/site-packages/lava/job'...
Listing './lib/python3.5/site-packages/lava/job/tests'...
Listing './lib/python3.5/site-packages/lava/script'...
Listing './lib/python3.5/site-packages/lava/script/tests'...
Listing './lib/python3.5/site-packages/lava/testdef'...
Listing './lib/python3.5/site-packages/lava/testdef/tests'...
Listing './lib/python3.5/site-packages/lava/tests'...
Listing './lib/python3.5/site-packages/lava/tool'...
Listing './lib/python3.5/site-packages/lava/tool/commands'...
Compiling './lib/python3.5/site-packages/lava/tool/dispatcher.py'...
***   File "./lib/python3.5/site-packages/lava/tool/dispatcher.py", line 159
    print "{0} >>> {1}".format(
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lava_dashboard_tool'...
Compiling './lib/python3.5/site-packages/lava_dashboard_tool/commands.py'...
***   File "./lib/python3.5/site-packages/lava_dashboard_tool/commands.py", line 247
    print "{0:^{1}}".format(self.caption, total_len)
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lava_dashboard_tool/tests'...
Listing './lib/python3.5/site-packages/lava_scheduler_tool'...
Compiling './lib/python3.5/site-packages/lava_scheduler_tool/commands.py'...
***   File "./lib/python3.5/site-packages/lava_scheduler_tool/commands.py", line 59
    except xmlrpclib.Fault, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lava_scheduler_tool-0.6.egg-info'...
Listing './lib/python3.5/site-packages/lava_tool'...
Listing './lib/python3.5/site-packages/lava_tool/commands'...
Compiling './lib/python3.5/site-packages/lava_tool/commands/auth.py'...
***   File "./lib/python3.5/site-packages/lava_tool/commands/auth.py", line 119
    print 'Token added successfully for user %s.' % username
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/lava_tool/tests'...
Listing './lib/python3.5/site-packages/lava_tool-0.11.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/pyxdg-0.25.egg-info'...
Listing './lib/python3.5/site-packages/secretstorage'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/versiontools'...
Listing './lib/python3.5/site-packages/versiontools-1.9.1.egg-info'...
Listing './lib/python3.5/site-packages/xdg'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
